add/edit gitlab

--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -282,7 +282,7 @@ $this->inlineScript()->appendScript('
                             <section id="git">
                                 <div class="form-group">
                                 <div class="col-sm-12 margin-top-15">
-                                 <?= $this->form->is_gitlab ?>  This project is on git.opendesktop.org      
+                                 <?= $this->form->is_gitlab_project ?>  This project is on git.opendesktop.org      
                                 </div>
                                 </div>
                                 <?= $this->form->gitlab_project_name ?>
