--- a/application/modules/default/views/scripts/product/viewscripts/input_gitlab_project_name.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_gitlab_project_name.phtml
@@ -32,7 +32,7 @@ $member = $getAuthUser->getAuthUser();
     </div>
     <div class="col-sm-12">
         https://git.opendesktop.org/<?= $member->username ?>/ <input id="<?= $this->escape($this->element->getName()) ?>"
-               class="required form-control"
+               class="form-control"
                type="text"
                maxlength="60"
                value="<?= $this->escape($this->element->getValue()) ?>"
