--- a/application/modules/default/views/scripts/product/viewscripts/input_gitlab_project_name.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_gitlab_project_name.phtml
@@ -31,12 +31,19 @@ $member = $getAuthUser->getAuthUser();
         <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">Your Project Name</label>
     </div>
     <div class="col-sm-12">
-        https://git.opendesktop.org/<?= $member->username ?>/ <input id="<?= $this->escape($this->element->getName()) ?>"
+        <dd>
+        https://git.opendesktop.org/<?= $member->username ?>/ 
+        </dd>
+        <dd>
+        <input id="<?= $this->escape($this->element->getName()) ?>"
                class="form-control"
                type="text"
                maxlength="60"
                value="<?= $this->escape($this->element->getValue()) ?>"
                name="<?= $this->escape($this->element->getName()) ?>"/>
+        </dd>
+        
+        
         <?php if ($this->element->getMessages()) {
             $errorHtml = '';
             foreach ($this->element->getMessages() as $currentError) {
