--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -135,6 +135,18 @@ $this->inlineScript()->appendScript('
             width: 25px;
             float: left;
         }
+        
+        #gitlab_project_name-element
+        {
+            width: 25px;
+            float: left;
+        }
+        
+        #gitlab_project_name
+        {
+            width: 300px;
+            float: left;
+        }
     </style>
     <main class="user-admin-page">
 
