--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -163,7 +163,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
 </div>
 <script type="application/javascript">
     var catTree = <?= $jsonTree ?>;
-    var catSelected = <?php null != $this->cat_id?$this->cat_id:null; ?>;
+    var catSelected = <?php $this->cat_id ?>;
 
     $(document).ready(function(){
         var hierarchy = (function () {
