--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -177,6 +177,6 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
 </script>
 <script type="application/javascript">
   var catTree = <?= $jsonTree ?>;
-  var catSelected = <?=$this->cat_id?>;
+  var categoryId = <?=$this->cat_id?>;
 </script>
 <script type="application/javascript" src="/theme/react/cat-tree.js"></script>
