--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -159,6 +159,8 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
             </div>
     </div>
 </div>
+<link rel="stylesheet" href="/theme/react/assets/css/category-tree.css"/>
+
 <div id="category-tree-container">
 </div>
 <script type="application/javascript">
