show guthub info

--- a/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
@@ -54,5 +54,10 @@
     <div class="small light lightgrey center margin-top-15">
         <a href="/password/request" class="lightblue"><?= $this->translate('Forgot your password?') ?></a>
     </div>
+    
+    <div class="small light lightgrey margin-top-15">
+        * for github login, please use "<a href="/password/request" class="lightblue"><?= $this->translate('request a new password') ?></a>" and then login with your username and new password
+        
+    </div>
 
 </div>
