add/edit gitlab

--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -295,7 +295,7 @@ $this->inlineScript()->appendScript('
                                 <?= $this->form->google_code ?>
 
                             </section>
-                            
+                            <?php /*
                             <h3>Git</h3>
                             <section id="git">
                                 <div class="form-group">
@@ -305,7 +305,7 @@ $this->inlineScript()->appendScript('
                                 </div>
                                 <?= $this->form->gitlab_project_name ?>
                             </section>    
-
+                            */ ?>
                             <h3>Files</h3>
                             <section id="files">
 
