--- a/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
@@ -56,7 +56,7 @@
     </div>
     
     <div class="small light lightgrey margin-top-15">
-        * for github login, please use "<a href="/password/request" class="lightblue"><?= $this->translate('request a new password') ?></a>" and then login with your username and new password
+        * for github login, please use "<a href="/password/request" class="lightblue"><?= $this->translate('reset password') ?></a>" and then login with your username and new password
         
     </div>
 
