--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -1,22 +1,36 @@
 out: ../css/cat-tree.css, sourcemap: true, compress: true
 
 #category-tree-container {
+  width: 100%;
+  float: left;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: 0px 1px 1px rgba(0,0,0,0.15);
+  background-color: white;
+  padding: 5px 0;
+
   ul {
     list-style-type: none;
-    margin-bottom: 10px;
-    padding-left: 5px;
+    margin-bottom: 5px;
+    padding-left: 10px;
     width: 100%;
     float: left;
+    font-size: 12px;
 
     li {
       width: 100%;
-      height: 18px;
-      line-height: 18px;
+      height: 14px;
+      line-height: 14px;
 
       a {
         display: block;
         width: 100%;
-        height: 18px;
+        height: 14px;
+
+        span {
+          float: right;
+          margin-right: 15px;
+        }
       }
     }
   }
