--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -1,4 +1,5 @@
 out: ../css/cat-tree.css, sourcemap: true, compress: true
+@import "elements.less";
 
 #category-tree-container {
   width: 100%;
@@ -21,16 +22,26 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
       width: 100%;
       height: 14px;
       line-height: 14px;
+      padding: 2px 0;
 
       a {
         display: block;
         width: 100%;
         height: 14px;
+        background-color: transparent;
+        .transition();
+
 
         span {
           float: right;
           margin-right: 15px;
         }
+      }
+
+      &:hover,
+      &.active {
+        background-color: #60bcff;
+        color: #ffffff;
       }
     }
   }
