--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -36,12 +36,13 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
           float: right;
           margin-right: 15px;
         }
-      }
 
-      &:hover,
-      &.active {
-        background-color: #60bcff;
-        color: #ffffff;
+        &:hover,
+        &.active {
+            background-color: #60bcff;
+            color: #ffffff;
+            font-weight: bold;
+        }
       }
     }
   }
