--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -13,22 +13,17 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
   ul {
     list-style-type: none;
     margin-bottom: 5px;
-    padding-left: 5px;
     width: 100%;
     float: left;
     font-size: 12px;
 
     li {
       width: 100%;
-      height: 14px;
-      line-height: 14px;
       padding: 2px 0;
 
       a {
-        padding-left: 5px;
         display: block;
         width: 100%;
-        height: 14px;
         background-color: transparent;
         .transition();
 
@@ -37,13 +32,18 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
           float: right;
           margin-right: 15px;
         }
+      }
 
-        &:hover,
-        &.active {
+      ul {
+        padding-left: 10px;
+      }
 
-            background-color: #60bcff;
-            color: #ffffff;
-            font-weight: bold;
+      &:hover,
+      &.active {
+        > a {
+          background-color: #60bcff;
+          color: #ffffff;
+          font-weight: bold;
         }
       }
     }
