--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -8,11 +8,12 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
   border-radius: 3px;
   box-shadow: 0px 1px 1px rgba(0,0,0,0.15);
   background-color: white;
-  padding: 5px 0;
+  padding: 5px;
 
   ul {
     list-style-type: none;
     margin-bottom: 5px;
+    padding-left: 0;
     width: 100%;
     float: left;
     font-size: 12px;
@@ -25,6 +26,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
         display: block;
         width: 100%;
         background-color: transparent;
+        color: #2673b0;
         .transition();
 
 
