--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -27,6 +27,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
         width: 100%;
         background-color: transparent;
         color: #2673b0;
+        padding-left: 5px;
         .transition();
 
 
@@ -45,7 +46,6 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
         > a {
           background-color: #60bcff;
           color: #ffffff;
-          font-weight: bold;
         }
       }
     }
