--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -8,7 +8,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
   border-radius: 3px;
   box-shadow: 0px 1px 1px rgba(0,0,0,0.15);
   background-color: white;
-  padding: 5px;
+  padding: 5px 0;
 
   ul {
     list-style-type: none;
