--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -25,6 +25,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
       a {
         display: block;
         width: 100%;
+        float: left;
         background-color: transparent;
         color: #2673b0;
         padding-left: 5px;
@@ -41,12 +42,13 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
         span.title {
           display: block;
           width: 100%;
+          float: left;
           overflow:hidden;
         }
 
         span.product-counter {
           position: absolute;
-          right: 15px;
+          right: 5px;
           float: right;
           margin-right: 15px;
         }
