--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -43,14 +43,15 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
           display: block;
           width: 100%;
           float: left;
-          overflow:hidden;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
         }
 
         span.product-counter {
           position: absolute;
           right: 5px;
           float: right;
-          margin-right: 15px;
         }
       }
 
