--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -36,6 +36,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
         &:hover {
           background-color: #60bcff;
           color: #ffffff;
+          font-weight: bold;
         }
 
 
