--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -21,6 +21,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
     li {
       width: 100%;
       padding: 2px 0;
+      float: left;
 
       a {
         display: block;
