--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -4,11 +4,6 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
 #category-tree-container {
   width: 100%;
   float: left;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  box-shadow: 0px 1px 1px rgba(0,0,0,0.15);
-  background-color: white;
-  padding: 5px 0;
 
   ul {
     list-style-type: none;
@@ -68,5 +63,15 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
         }
       }
     }
+  }
+}
+
+#explore-content {
+  #category-tree-container {
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.15);
+    background-color: white;
+    padding: 5px 0;
   }
 }
