--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -66,7 +66,8 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
   }
 }
 
-#explore-content {
+#product-page-content,
+#explore-content.startpage-store {
   #category-tree-container {
     border: 1px solid #ccc;
     border-radius: 3px;
