--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -67,7 +67,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
 }
 
 #product-page-content,
-#explore-content.startpage-store {
+#products-wrapper {
   #category-tree-container {
     border: 1px solid #ccc;
     border-radius: 3px;
