--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -182,7 +182,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
   <?php
     $catIdExists = isset($this->cat_id);
     if ($catIdExists){
-      echo "var categoryId = ".<?=this->cat_id?>.";"
+      echo "var categoryId = ". this->cat_id .";"
     }
   ?>
 </script>
