--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -7,7 +7,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
 
   ul {
     list-style-type: none;
-    margin-bottom: 5px;
+    margin-bottom: 0;
     padding-left: 0;
     width: 100%;
     float: left;
