--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -27,7 +27,8 @@ $this->categories = $modelCategory->fetchTreeForView();
 $this->navBackgroundColorActive = $this->template['header-nav-tabs']['background-color-active'];
 $this->navBackgroundColor = $this->template['header-nav-tabs']['background-color'];
 $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
-?><style type="text/css">
+?>
+<style type="text/css">
 
     .naviblock {
         list-style-type: none;
@@ -94,7 +95,10 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
         color:  <?=$this->navBackgroundColorActive?>;
     }
    */
+
 </style>
+
+<?php /*
 <div class="panel-group" id="accordion">
     <div class="panel panel-default accordion-group">
             <div style="margin-left: -10px">
@@ -142,7 +146,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
              * @param string $selectedOrder
              * @return string
              */
-            function addRoot($selectedOrder)
+            /*function addRoot($selectedOrder)
             {
                 $helpExploreUrl = new Default_View_Helper_BuildExploreUrl();
                 $urlExplore = $helpExploreUrl->buildExploreUrl(null, null, $selectedOrder);
@@ -159,12 +163,10 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
             </div>
     </div>
 </div>
-<link rel="stylesheet" href="/theme/react/assets/css/cat-tree.css"/>
-
-<div id="category-tree-container">
-</div>
+*/
+?>
 <script type="application/javascript">
-    $(document).ready(function(){
+    /*$(document).ready(function(){
         var hierarchy = (function () {
             return {
                 setup: function (cat_id) {
@@ -175,8 +177,11 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
         })();
 
         hierarchy.setup(<?=$this->cat_id?>);
-    });
+    });*/
 </script>
+<link rel="stylesheet" href="/theme/react/assets/css/cat-tree.css"/>
+<div id="category-tree-container">
+</div>
 <script type="application/javascript">
   var catTree = <?= $jsonTree ?>;
   <?php
