--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -183,7 +183,8 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
 <div id="category-tree-container">
 </div>
 <script type="application/javascript">
-  var catTree = <?= json_encode($this->categories) ?>;
+  <?php $jsonTree = json_encode($this->categories); ?>
+  var catTree = <?= $jsonTree ?>;
   <?php
     $catIdExists = isset($this->cat_id);
     if ($catIdExists){
