--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -98,7 +98,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
 
 </style>
 
-<div class="panel-group" id="accordion">
+<div class="panel-group old-cat-tree-container" id="accordion">
     <div class="panel panel-default accordion-group">
             <div style="margin-left: -10px">
             <?php
