--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -1,6 +1,10 @@
 out: ../css/cat-tree.css, sourcemap: true, compress: true
 @import "elements.less";
 
+.old-cat-tree-container {
+  display: none;
+}
+
 #category-tree-container {
   width: 100%;
   float: left;
