--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -73,10 +73,12 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
 #product-page-content,
 #products-wrapper {
   #category-tree-container {
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    box-shadow: 0px 1px 1px rgba(0,0,0,0.15);
-    background-color: white;
-    padding: 5px 0;
+    ul.main {
+      border: 1px solid #ccc;
+      border-radius: 3px;
+      box-shadow: 0px 1px 1px rgba(0,0,0,0.15);
+      background-color: white;
+      padding: 5px 0;
+    }
   }
 }
