--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -73,7 +73,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
 #product-page-content,
 #products-wrapper {
   #category-tree-container {
-    ul.main {
+    ul.main-list {
       border: 1px solid #ccc;
       border-radius: 3px;
       box-shadow: 0px 1px 1px rgba(0,0,0,0.15);
