--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -5,6 +5,14 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
   display: none;
 }
 
+.mobile-menu-item {
+  padding: 5px;
+  height: 24px;
+  line-height: 24px;
+  display: block;
+  width: 100%;
+}
+
 #category-tree-container {
   width: 100%;
   float: left;
@@ -68,6 +76,15 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
       }
     }
   }
+
+  #slected-category-tree-item {
+    .mobile-menu-item;
+
+    &::before {
+      content: ">";
+    }
+  }
+
 }
 
 #product-page-content,
