--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -80,8 +80,23 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
   #slected-category-tree-item {
     .mobile-menu-item;
 
-    &::before {
-      content: ">";
+    a {
+      display: block;
+      float: left;
+      padding: 0 5px 0 20px;;
+      position: relative;
+      &::before {
+        content: ">";
+        position: absolute;
+        display: block;
+        left: 5px;
+      }
+      &:first-child {
+        padding-left: 5px;
+        &::before {
+          content: "";
+        }
+      }
     }
   }
 
