--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -7,10 +7,10 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
 
 .mobile-menu-item {
   padding: 5px;
-  height: 24px;
-  line-height: 24px;
+  height: auto;
   display: block;
   width: 100%;
+  float: left;
 }
 
 #category-tree-container {
