--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -85,14 +85,16 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
       float: left;
       padding: 0 5px 0 20px;;
       position: relative;
+
       &::before {
         content: ">";
         position: absolute;
         display: block;
         left: 5px;
       }
+
       &:first-child {
-        padding-left: 5px;
+        padding-left: 0;
         &::before {
           content: "";
         }
