--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -102,6 +102,16 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
     }
   }
 
+  #categoryTree.tablet {
+    ul {
+      li {
+        a {
+          .mobile-menu-item;
+        }
+      }
+    }
+  }
+
 }
 
 #product-page-content,
