--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -11,6 +11,9 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
   display: block;
   width: 100%;
   float: left;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 12px;
 }
 
 #category-tree-container {
@@ -108,6 +111,9 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
         a {
           .mobile-menu-item;
         }
+      }
+      &.main-list {
+        border: 0;
       }
     }
   }
