--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -10,7 +10,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
   height: auto;
   display: block;
   width: 100%;
-  float: left; 
+  float: left;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 12px;
@@ -19,6 +19,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
 #category-tree-container {
   width: 100%;
   float: left;
+  margin-bottom: 15px;
 
   ul {
     list-style-type: none;
