--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -82,6 +82,8 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
   }
 
   #slected-category-tree-item {
+    background-color: #fafafa;
+    margin-bottom: 5px;
     .mobile-menu-item;
 
     a {
