--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -96,6 +96,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
       height: 15px;
       width: 15px;
       background-image: url('../img/chevron_down.png');
+      .transition();
     }
 
     a {
