--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -125,7 +125,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
     ul {
       li {
         a {
-          .mobile-menu-item;
+          height: 24px;
         }
       }
       &.main-list {
