--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -126,10 +126,10 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
       li {
         a {
           height: 24px;
+          line-height: 24px;
         }
       }
       &.main-list {
-        border: 0;
       }
     }
   }
