--- a/httpdocs/theme/react/assets/less/cat-tree.less
+++ b/httpdocs/theme/react/assets/less/cat-tree.less
@@ -2,7 +2,7 @@ out: ../css/cat-tree.css, sourcemap: true, compress: true
 @import "elements.less";
 
 .old-cat-tree-container {
-  display: none;
+  // display: none;
 }
 
 .mobile-menu-item {
