--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -64,8 +64,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
     {
         color:  <?=$this->navBackgroundColorActive?>;
     }
-    ul.naviblock a.active.child,
-    ul.main-list li.active > a
+    ul.naviblock a.active.child
     {
         background-color:  <?=$this->navBackgroundColorActive?>;
         color:  <?=$this->navColorActive?>;
