--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -69,8 +69,9 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
         background-color:  <?=$this->navBackgroundColorActive?>;
         color:  <?=$this->navColorActive?>;
     }
-    li.navilink.active.parent a.active.parent{
-
+    li.navilink.active.parent a.active.parent,
+    #category-tree-container #category-tree ul li.active a
+    {
         background-color:  <?=$this->navBackgroundColorActive?>;
         color:  <?=$this->navColorActive?>;
     }
