--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -70,7 +70,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
         color:  <?=$this->navColorActive?>;
     }
     li.navilink.active.parent a.active.parent,
-    #category-tree-container #category-tree ul li.active a
+    #category-tree-container #category-tree ul li.active > a
     {
         background-color:  <?=$this->navBackgroundColorActive?>;
         color:  <?=$this->navColorActive?>;
