--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -74,7 +74,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
 
     li.navilink.active.parent a.active.parent,
     #category-tree-container #category-tree ul li.active > a,
-    #category-tree-container #category-tree ul li:hover > a
+    #category-tree-container #category-tree ul li a:hover
     {
         background-color:  <?=$this->navBackgroundColorActive?> !important;
         color:  <?=$this->navColorActive?> !important;
